# cog-cpu-shortform-toolkit

./: .gitignore  LICENSE  README.md  cog.yaml  main.py  predict.py  pyproject.toml  samples.py
